scrollbar hidden, chat window fixed somwhat

--- a/whatsapp_clone/src/Chat.css
+++ b/whatsapp_clone/src/Chat.css
@@ -9,7 +9,12 @@
   background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
   background-repeat: repeat;
   padding: 30px;
-  overflow: scroll;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+}
+
+.chat__window::-webkit-scrollbar {
+  width: 0 !important;
 }
 
 .chat__message {
