--- a/whatsapp_clone/src/Sidebar.css
+++ b/whatsapp_clone/src/Sidebar.css
@@ -49,5 +49,5 @@
 .sidebar__chats {
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow-y: auto;
 }
